--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,18 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "PyPSF"
 version = "0.1.0"
 description = "A Python library for working with PC Screen Font files"
 authors = ["Kevin de Jong <kvdjong@gmail.com>"]
+readme = "README.md"
 include = ["pypsf"]
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+python = "^3.8"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+isort = "*"
