--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "PyPSF"
+name = "PSFlib"
 version = "0.1.0"
-description = "A Python library for working with PC Screen Font files"
+description = "A Python library for working with PC Screen Fonts"
 authors = ["Kevin de Jong <kvdjong@gmail.com>"]
 readme = "README.md"
-include = ["pypsf"]
+include = ["psflib"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
